--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
       </div>
     </div>
     <div class="contact sct" id="contact">
-      <div class="container">
+      <div class="map reveal"></div>
+      <div class="col">
         <h1>Contact</h1>
         <form action="">
           <input class="reveal" type="text" placeholder="Name" />
@@ -129,5 +130,9 @@
       <p>&#169; 2021 <span>Abdelillah</span>. All Rights Reserved.</p>
     </footer>
     <script src="main.js"></script>
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0oREtZh4vlYyo5URl9FWfv1bAVFMY0qQ&callback=initMap&map_ids=3ec277246559c298"
+    ></script>
   </body>
 </html>
