--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1>Works</h1>
         <div class="grid">
           <div class="card reveal">
-            <img src="img/tm1.png" alt="" />
+            <img src="img/tm1.jpg" alt="" />
             <a
               href="https://abdelillahze.github.io/html_css3/"
               target="_blank"
@@ -52,7 +52,7 @@
             <img src="img/view-show.svg" alt="" />
           </div>
           <div class="card reveal">
-            <img src="img/tm2.png" alt="" />
+            <img src="img/tm2.jpg" alt="" />
             <a
               href="https://abdelillahze.github.io/html--css2/"
               target="_blank"
@@ -60,7 +60,7 @@
             <img src="img/view-show.svg" alt="" />
           </div>
           <div class="card reveal">
-            <img src="img/tm3.png" alt="" />
+            <img src="img/tm3.jpg" alt="" />
             <a
               href="https://abdelillahze.github.io/html_css_3/"
               target="_blank"
@@ -68,7 +68,7 @@
             <img src="img/view-show.svg" alt="" />
           </div>
           <div class="card reveal">
-            <img src="img/tm4.png" alt="" />
+            <img src="img/tm4.jpg" alt="" />
             <a
               href="https://abdelillahze.github.io/Html-Css/"
               target="_blank"
@@ -76,7 +76,7 @@
             <img src="img/view-show.svg" alt="" />
           </div>
           <div class="card reveal">
-            <img src="img/tm5.png" alt="" />
+            <img src="img/tm5.jpg" alt="" />
             <a
               href="https://abdelillahze.github.io/html-css4/"
               target="_blank"
@@ -84,7 +84,7 @@
             <img src="img/view-show.svg" alt="" />
           </div>
           <div class="card reveal">
-            <img src="img/tm6.png" alt="" />
+            <img src="img/tm6.jpg" alt="" />
             <a
               href="https://abdelillahze.github.io/html-css5/"
               target="_blank"
@@ -131,8 +131,8 @@
     </footer>
     <script src="main.js"></script>
     <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0oREtZh4vlYyo5URl9FWfv1bAVFMY0qQ&callback=initMap&map_ids=48d39a42927407a8"
       async
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0oREtZh4vlYyo5URl9FWfv1bAVFMY0qQ&callback=initMap&map_ids=3ec277246559c298"
     ></script>
   </body>
 </html>
